test/files/neg/t7494-multi-right-after/sample_2.scala
//> using options -Xplugin:. -Xplugin-require:multi-rafter
package sample

// just a sample that is compiled with the sample plugin enabled
object Sample extends App {
}
